# app/Models/PesertaKegiatanTerverifikasi.php
@@ -8,4 +8,14 @@ use Illuminate\Database\Eloquent\Model;
 class PesertaKegiatanTerverifikasi extends Model
 {
     use HasFactory;
+    protected $fillable = [
+        'kegiatan_id',
+        'nik',
+        'nama_peserta',
+        'klasifikasi_id',
+        'metode_id',
+        'unsur_id',
+        'tingkat_id',
+        'created_by'
+    ];
 }
